# DataAnalysisToolkit

./: pyproject.toml
src/dataanalysistoolkit/generators/: generate_data.py
src/dataanalysistoolkit/model/clustering/: __init__.py  k_means.py
tests/generators/: test_csv_data_generator.py  test_generate_data.py  test_report_generator.py
tests/integrators/: test_data_integrator.py
tests/model/: test_feature_engineer.py  test_model_evaluator.py
tests/preprocessor/: test_data_prep.py
tests/utils/: test_data_imputer.py
tests/visualizer/: test_data_visualizer.py
