[tool.poetry]
name = "DataAnalysisToolkit"
version = "1.2.3"
description = "The DataAnalysisToolkit project is a Python-based data analysis tool designed to streamline various data analysis tasks. It allows users to load data from CSV files and perform operations such as statistical calculations, outlier detection, data cleaning, and visualization."
authors = ["Thaddeus Thomas <thaddeus.r.thomas@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/thomasthaddeus/dataanalysistoolkit"
repository = "https://github.com/thomasthaddeus/dataanalysistoolkit"
documentation = "https://dataanalysistoolkit.readthedocs.io/en/latest/"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Jupyter",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Education",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis"
]
keywords = ["data analysis", "CSV", "statistics", "data cleaning", "data visualization"]
include = [ "tests/data/*.csv", "src/dataanalysistoolkit/.conf/*.json"]

[tool.poetry.dependencies]
python = "^3.9"
# dataanalysistoolkit = {path = "../src/dataanalysistoolkit/", develop = true}
certifi = "2026.5.20"
charset-normalizer = "3.4.7"
click = "8.1.8"
colorama = "0.4.6"
contourpy = "1.3.0"
cycler = "0.12.1"
docutils = "0.21.2"
fonttools = "4.60.2"
greenlet = "3.2.5"
idna = "3.18"
importlib_metadata = "8.7.1"
joblib = "1.5.3"
keyring = "25.7.0"
kiwisolver = "1.4.7"
markdown-it-py = "3.0.0"
matplotlib = "3.9.4"
mdurl = "0.1.2"
more-itertools = "10.8.0"
nh3 = "0.3.5"
nltk = "3.9.2"
numpy = "2.0.2"
packaging = "26.2"
pandas = "2.3.3"
pillow = "11.3.0"
pkginfo = "1.12.1.2"
Pygments = "2.20.0"
pyparsing = "3.3.2"
pyproject_hooks = "1.2.0"
python-dateutil = "2.9.0.post0"
pytz = "2024.1"
pywin32-ctypes = "0.2.3"
readme_renderer = "44.0"
regex = "2026.1.15"
requests = "2.32.5"
requests-toolbelt = "1.0.0"
rfc3986 = "2.0.0"
rich = "15.0.0"
scikit-learn = "1.6.1"
scipy = "1.13.1"
seaborn = "0.13.2"
six = "1.17.0"
SQLAlchemy = "2.0.50"
threadpoolctl = "3.6.0"
tqdm = "4.67.3"
typing_extensions = "4.15.0"
tzdata = "2026.2"
urllib3 = "2.6.3"
zipp = "3.23.1"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-mock = "*"
check-manifest = "*"
myst-parser = "*"
sphinx = "*"
nbsphinx = "*"
sphinx-rtd-theme = "*"
sphinxcontrib-websupport = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
